objects/Testing123__c.object
<CustomObject>
    <fields>
        <fullName>NOP__c</fullName>
        <label>NOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfP__c</fullName>
        <externalId>true</externalId>
        <label>NumberOfP</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductStrength__c</fullName>
        <formula>IF( NumberOfP__c  &gt;= 10  &amp;&amp;  NumberOfP__c &lt;20, &apos;10-20&apos;,IF( NumberOfP__c  &gt;= 20  &amp;&amp;  NumberOfP__c &lt;30,&apos;30-40&apos;,&apos;01-09&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductStrength</label>
        <type>Text</type>
    </fields>
    <label>Testing123</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>NumberOfP__c</columns>
        <columns>Price__c</columns>
        <columns>ProductStrength__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>PNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testing123</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>